--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "postcss-preset-env": "^7.7.0",
@@ -29,6 +30,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
